--- a/src/Views/MainWindow.xaml
+++ b/src/Views/MainWindow.xaml
@@ -13,7 +13,7 @@
         MinWidth="720"
         Height="600"
         MinHeight="540"
-        Title="PixConvert">
+        Title="{DynamicResource App_Title}">
 
     <Window.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
