--- a/src/Resources/Languages/Lang.ko-KR.xaml
+++ b/src/Resources/Languages/Lang.ko-KR.xaml
@@ -15,7 +15,7 @@
     <sys:String x:Key="List_Path">경로</sys:String>
     <sys:String x:Key="List_Status">상태</sys:String>
 
-    <!-- Sidebar : Dashboard -->
+    <!-- 헤더 : 대시보드 -->
     <sys:String x:Key="Status_Total">파일 합계</sys:String>
     <sys:String x:Key="Status_Unknown">미지원 파일</sys:String>
 
@@ -34,7 +34,7 @@
     <sys:String x:Key="Sort_Label">정렬</sys:String>
     <sys:String x:Key="Sort_Asc">오름차순</sys:String>
     <sys:String x:Key="Sort_Desc">내림차순</sys:String>
-    <!-- 정렬 : 드롭다운 -->
+    <!-- 정렬 : 정렬 드롭다운 -->
     <sys:String x:Key="Sort_Index">번호</sys:String>
     <sys:String x:Key="Sort_NameIndex">이름-번호</sys:String>
     <sys:String x:Key="Sort_NamePath">이름-경로</sys:String>
@@ -83,12 +83,12 @@
     <sys:String x:Key="Msg_OperationComplete">{0}개의 작업이 완료되었습니다.</sys:String>
 
     <!-- 다이얼로그 -->
+    <sys:String x:Key="Err_Fatal_Title">시작 오류</sys:String>
+    <sys:String x:Key="Err_Fatal_Init">애플리케이션 시작 중 오류가 발생했습니다:\n{0}</sys:String>
     <sys:String x:Key="Dlg_Yes">네</sys:String>
     <sys:String x:Key="Dlg_No">아니오</sys:String>
     <sys:String x:Key="Dlg_Confirm">확인</sys:String>
     <sys:String x:Key="Dlg_Cancel">취소</sys:String>
-    <sys:String x:Key="Err_Fatal_Init">애플리케이션 시작 중 오류가 발생했습니다:\n{0}</sys:String>
-    <sys:String x:Key="Err_Fatal_Title">시작 오류</sys:String>
 
     <sys:String x:Key="Dlg_Title_AddFile">파일 추가</sys:String>
     <sys:String x:Key="Dlg_Title_AddFolder">폴더 추가</sys:String>
