Refactor: replace IsBusy with AppStatus Model

--- a/src/App.xaml
+++ b/src/App.xaml
@@ -2,8 +2,8 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:PixConvert"
-             xmlns:ui="http://schemas.modernwpf.com/2019">
-
+             xmlns:ui="http://schemas.modernwpf.com/2019"
+             xmlns:converters="clr-namespace:PixConvert.Converters">
 
     <Application.Resources>
         <ResourceDictionary>
@@ -14,6 +14,10 @@
                 <ResourceDictionary Source="Resources/Icons/help.xaml" />
                 <ResourceDictionary Source="Resources/Languages/Lang.Serilog.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <converters:AppStatusToVisibilityConverter x:Key="AppStatusToVisibilityConverter" />
+            <converters:AppStatusToInverseBooleanConverter x:Key="AppStatusToInverseBooleanConverter" />
+            <converters:StatusToTextConverter x:Key="StatusToTextConverter" />
+            <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
